Fix inactive suns/moons being too small

--- a/components/CardFront/styles.module.scss
+++ b/components/CardFront/styles.module.scss
@@ -513,6 +513,8 @@
   }
 
   .inactive {
+    width: 100%;
+
     img {
       width: 44%;
       margin: auto;
